OpenXR-MotionCompensation Changelog

Version 0.2.7

	Installer
	- fixed removal of prexisting oxrmc registry keys sharing path prefix

Version 0.2.6

	Automatic activation
	- added option to automatically activate motion compensation on application startup
	- added delay for auto activation
	- added audible countdown for auto activation

	Installer
	- added API layer reordering for Varjo-Foveated
	- updated layer reordering for OpenXR Toolkit (layer name changed)
	
	Filter
	- added ability to modify vertical translational filter strength
	
	Input
	- excluded inputs with additional modifiers (only for artificial keyboard input e.g. joy2key)
	
	Bugfixes
	- fixed multithreading bug causing ctd in MSFS
	- fixed performance issue in DCS World
	- fixed unit for translations in MMF reader app (m -> mm)
	
Version 0.2.5

	Graphical overlay
	- added toggle to deactivate initialization
	- configurable marker size
	
	Virtual tracker
	- added upside down mode (required  for iRacing)
	
	Physical tracker
	- added early initialization option (required for iRacing & DFR in OXRTK)

	Bugfixes
	- fixed crash on vr session end with oxrtk present
	- fixed physical tracker fallback initialization
	- fixed reference space creation causing cor position to jump on mc activation
	
	Known issues
	- incompatible with DCS World native OpenXR mode (unacceptable fps drop, under investigation)
	
Version 0.2.4

	Graphical overlay
	- added marker to visualize reference tracker
	- support for DirectX 11 and 12
	
	Disable functionality
	- deactivate completely
	- omit physical tracker initialization
	
	Configure pose reversion on frame submission
	- (optional) eye position cache (pre 0.1.4 method)
	- cache tolerance configurable

Version 0.2.3

	Tracker connection loss detection
	- unresponsive tracker is detected
	- motion compensation is deactivated after timeout

	MMF Reader
	- added application to display input values from memory mapped file(s) used for virtual trackers
	
	Installation Executable