@@ -31,14 +31,6 @@ offset_down = 0.0
 offset_right = 0.0
 ; load saved cor instead of recalibration with headset + offset
 use_cor_pos = 0
-; saved position of cor
-cor_x = 0.0
-cor_y = 0.0
-cor_z = 0.0
-cor_a = 0.0
-cor_b = 0.0
-cor_c = 0.0
-cor_d = 0.0
 ; overlay marker size (in cm)
 marker_size = 10.0
 ; use values from yaw vr game engine for cor offset 
@@ -46,7 +38,25 @@ use_yaw_ge_offset = 0
 ; recovery time before deactivation after tracker connection loss, in seconds, 0.0 = deactivated 
 connection_timeout = 3.0
 ; interval to check virtual tracker connection, in seconds , 0.0 = deactivated 
-connection_check = 1.0													
+connection_check = 1.0					
+
+; KEYS STARTING WITH cor_ ARE NOT SUITED FOR MANUAL MODIFICATION!
+; saved cor position for native OpenXR
+cor_x = 0.0
+cor_y = 0.0
+cor_z = 0.0
+cor_a = 0.0
+cor_b = 0.0
+cor_c = 0.0
+cor_d = 0.0
+; saved cor position for OpenComposite
+cor_x_oc = 0.0
+cor_y_oc = 0.0
+cor_z_oc = 0.0
+cor_a_oc = 0.0
+cor_b_oc = 0.0
+cor_c_oc = 0.0
+cor_d_oc = 0.0
 
 [translation_filter]
 ; value between 0.0 (filter off) and 1.0 (initial location is never changed)
