@@ -161,8 +161,8 @@ To enable OXRMC to correlate translation and rotation of the rig to the virtual 
 
 ### Saving and the cor location
 The current position and orientation of the cor is part of the configuration and can be saved to the (global or app-specific) config file. When your satisfied with the current setting you can set the config key `use_cor_pos` to `1`. This causes the cor position to be loaded from the config file when calibrating instead of being determined using the hmd position and the offset values.  
-**Note that this functionality may not work with all HMD vendors. Setting up the playspace in the VR runtime configuration of your hmd might help to get this working correctly. Rumor has it that some HMDs need to be started/initialized at the exact same location for the playspace coordinates to be consistent in between uses.**  
-Feedback on success or failure of this functionality using different VR systems is very welcome and can be made via [discord server](#contact) of the project.
+Applications using OpenComposite ususally operate in a different VR playspace than titles supporting native OpenXR. That's why cor position needs to be saved once for all native games and once for all games using OpenComposite.  
+**Note that this functionality may not work with all HMD vendors. Initilly setting up the playspace in the VR runtime of your hmd might help to get this working correctly. Rumor has it that some HMDs need to be started/initialized at the exact same location for the playspace coordinates to be consistent in between uses.**
 
 ## Running your application
 1. make sure your using OpenXR as runtime in the application you wish to use motion compensation in
