@@ -1,9 +1,15 @@
 OpenXR-MotionCompensation Changelog
 
 Version 0.2.7
+	
+	Virtual tracker
+	- enabled cor position for games using OpenComposite to be saved and loaded separately
 
 	Installer
 	- fixed removal of prexisting oxrmc registry keys sharing path prefix
+	
+	Bugfixes
+	- fixed ctd in DCS when loading mission with mc activated
 
 Version 0.2.6
 
